bi-prime-server/src/main/java/br/com/proximati/biprime/server/olapql/language/query/QueryParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. QueryParser.java */
package br.com.proximati.biprime.server.olapql.language.query;
import java.io.ByteArrayInputStream;
import java.io.InputStream;

public class QueryParser/*@bgen(jjtree)*/implements QueryParserTreeConstants, QueryParserConstants {/*@bgen(jjtree)*/
  protected JJTQueryParserState jjtree = new JJTQueryParserState();private boolean rows = false;

   private boolean columns = false;

   public static void main(String args [])
   {
      String s = "selecione [Teste] nas colunas, [Teste] nas linhas do cubo [Vendas] onde n\u00e3o (1 > [n\u00edvel].[propriedade]) e 1 = 1 ou [filtro]";
      InputStream in = new ByteArrayInputStream(s.getBytes());
      QueryParser parser = new QueryParser(in);
      try
      {
         SimpleNode node = parser.select();
         node.dump(" ");
      }
      catch (ParseException ex)
      {
         ex.printStackTrace();
      }
   }

   private void fixChildren(Node node)
   {
      for (int i = 0; i < node.jjtGetNumChildren(); i++)
      {
         node.jjtGetChild(i).jjtSetParent(node);
         fixChildren(node.jjtGetChild(i));
      }
   }

  final public SimpleNode select() throws ParseException {
 /*@bgen(jjtree) Select */
  ASTSelect jjtn000 = new ASTSelect(JJTSELECT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SELECT);
      axis();
      jj_consume_token(COMMA);
      axis();
      jj_consume_token(FROM);
      jj_consume_token(CUBE);
      cube();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WHERE:
        jj_consume_token(WHERE);
                                                                             ASTFilterExpression jjtn001 = new ASTFilterExpression(JJTFILTEREXPRESSION);
                                                                             boolean jjtc001 = true;
                                                                             jjtree.openNodeScope(jjtn001);
        try {
          filterExpression();
        } catch (Throwable jjte001) {
                                                                             if (jjtc001) {
                                                                               jjtree.clearNodeScope(jjtn001);
                                                                               jjtc001 = false;
                                                                             } else {
                                                                               jjtree.popNode();
                                                                             }
                                                                             if (jjte001 instanceof RuntimeException) {
                                                                               {if (true) throw (RuntimeException)jjte001;}
                                                                             }
                                                                             if (jjte001 instanceof ParseException) {
                                                                               {if (true) throw (ParseException)jjte001;}
                                                                             }
                                                                             {if (true) throw (Error)jjte001;}
        } finally {
                                                                             if (jjtc001) {
                                                                               jjtree.closeNodeScope(jjtn001, true);
                                                                             }
        }
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
      jj_consume_token(0);
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
      {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
    throw new Error("Missing return statement in function");
  }

  final public void axis() throws ParseException {
 /*@bgen(jjtree) Axis */
   ASTAxis jjtn000 = new ASTAxis(JJTAXIS);
   boolean jjtc000 = true;
   jjtree.openNodeScope(jjtn000);java.util.List < SimpleNode > nodes = new java.util.ArrayList < SimpleNode > ();
   String axis;
    try {
      set(nodes);
      jj_consume_token(ON);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ROWS:
        axis = rows();
        break;
      case COLUMNS:
        axis = columns();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
      // desconsidera os children adicionados pelo jjtree através do método closeNodeScope
      jjtn000.children = null;
      for (SimpleNode node : nodes)
      {
         jjtn000.jjtAddChild(node, jjtn000.jjtGetNumChildren());
         node.jjtSetParent(jjtn000);
      }
      fixChildren(jjtn000);
      jjtn000.value = axis;
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public String rows() throws ParseException {
      if (rows) {if (true) throw new ParseException("O eixo das linhas foi duplicado");}
      else rows = true;
    jj_consume_token(ROWS);
      {if (true) return "ROWS";}
    throw new Error("Missing return statement in function");
  }

  final public String columns() throws ParseException {
      if (columns) {if (true) throw new ParseException("O eixo das colunas foi duplicado");}
      else columns = true;
    jj_consume_token(COLUMNS);
      {if (true) return "COLUMNS";}
    throw new Error("Missing return statement in function");
  }

  final public void set(java.util.List < SimpleNode > nodes) throws ParseException {
   SimpleNode node = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
    case METADATA_OBJECT_NAME:
      node = node();
         nodes.add(node);
      break;
    case LBRACE:
      if (jj_2_1(3)) {
        jj_consume_token(LBRACE);
        node = node();
            nodes.add(node);
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case COMMA:
            ;
            break;
          default:
            jj_la1[2] = jj_gen;
            break label_1;
          }
          jj_consume_token(COMMA);
          set(nodes);
        }
        jj_consume_token(RBRACE);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LBRACE:
          jj_consume_token(LBRACE);
          set(nodes);
          jj_consume_token(RBRACE);
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public SimpleNode node() throws ParseException {
   SimpleNode node;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case METADATA_OBJECT_NAME:
      node = metadataObject();
      break;
    case LPAREN:
      node = crossJoin();
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
      {if (true) return node;}
    throw new Error("Missing return statement in function");
  }

  final public SimpleNode metadataObject() throws ParseException {
   SimpleNode node = null;
    if (jj_2_2(2)) {
      node = propertyNode();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case METADATA_OBJECT_NAME:
        node = levelOrMeasureOrFilter();
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
      {if (true) return node;}
    throw new Error("Missing return statement in function");
  }

  final public SimpleNode levelOrMeasureOrFilter() throws ParseException {
 /*@bgen(jjtree) LevelOrMeasureOrFilter */
   ASTLevelOrMeasureOrFilter jjtn000 = new ASTLevelOrMeasureOrFilter(JJTLEVELORMEASUREORFILTER);
   boolean jjtc000 = true;
   jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(METADATA_OBJECT_NAME);
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
      jjtn000.value = t.image;
      {if (true) return jjtn000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
    throw new Error("Missing return statement in function");
  }

  final public SimpleNode propertyNode() throws ParseException {
 /*@bgen(jjtree) PropertyNode */
   ASTPropertyNode jjtn000 = new ASTPropertyNode(JJTPROPERTYNODE);
   boolean jjtc000 = true;
   jjtree.openNodeScope(jjtn000);Token t;
   String property;
    try {
      t = jj_consume_token(METADATA_OBJECT_NAME);
      property = t.image;
      jj_consume_token(DOT);
      t = jj_consume_token(METADATA_OBJECT_NAME);
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
      property += "." + t.image;
      jjtn000.value = property;
      {if (true) return jjtn000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
    throw new Error("Missing return statement in function");
  }

  final public SimpleNode crossJoin() throws ParseException {
   SimpleNode firstArgument;
   java.util.List < SimpleNode > secondArgument = new java.util.ArrayList < SimpleNode > ();
    jj_consume_token(LPAREN);
    firstArgument = metadataObject();
    jj_consume_token(COMMA);
    set(secondArgument);
    jj_consume_token(RPAREN);
      for (SimpleNode node : secondArgument)
      {
         firstArgument.jjtAddChild(node, firstArgument.jjtGetNumChildren());
         node.jjtSetParent(firstArgument);
      }
      {if (true) return firstArgument;}
    throw new Error("Missing return statement in function");
  }

/* ************************ */
/* ******* METADATA ******* */
/* ************************ */
  final public void level() throws ParseException {
 /*@bgen(jjtree) Level */
   ASTLevel jjtn000 = new ASTLevel(JJTLEVEL);
   boolean jjtc000 = true;
   jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(METADATA_OBJECT_NAME);
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
      jjtn000.value = t.image;
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void filter() throws ParseException {
 /*@bgen(jjtree) Filter */
   ASTFilter jjtn000 = new ASTFilter(JJTFILTER);
   boolean jjtc000 = true;
   jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(METADATA_OBJECT_NAME);
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
      jjtn000.value = t.image;
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public SimpleNode property() throws ParseException {
 /*@bgen(jjtree) Property */
   ASTProperty jjtn000 = new ASTProperty(JJTPROPERTY);
   boolean jjtc000 = true;
   jjtree.openNodeScope(jjtn000);Token t;
   String property;
    try {
      t = jj_consume_token(METADATA_OBJECT_NAME);
      property = t.image;
      jj_consume_token(DOT);
      t = jj_consume_token(METADATA_OBJECT_NAME);
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
      property += "." + t.image;
      jjtn000.value = property;
      {if (true) return jjtn000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
    throw new Error("Missing return statement in function");
  }

  final public void cube() throws ParseException {
 /*@bgen(jjtree) Cube */
   ASTCube jjtn000 = new ASTCube(JJTCUBE);
   boolean jjtc000 = true;
   jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(METADATA_OBJECT_NAME);
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
      jjtn000.value = t.image;
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

/* ********************** */
/* ******* FILTER ******* */
/* ********************** */
  final public SimpleNode detachedFilterExpression() throws ParseException {
 /*@bgen(jjtree) DetachedFilterExpression */
  ASTDetachedFilterExpression jjtn000 = new ASTDetachedFilterExpression(JJTDETACHEDFILTEREXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      filterExpression();
      jj_consume_token(0);
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
      {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
    throw new Error("Missing return statement in function");
  }

  final public void filterExpression() throws ParseException {
    orCondition();
  }

  final public void orCondition() throws ParseException {
 /*@bgen(jjtree) #OrCondition(> 1) */
  ASTOrCondition jjtn000 = new ASTOrCondition(JJTORCONDITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      andCondition();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case OR:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_2;
        }
        jj_consume_token(OR);
        andCondition();
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, jjtree.nodeArity() > 1);
     }
    }
  }

  final public void andCondition() throws ParseException {
 /*@bgen(jjtree) #AndCondition(> 1) */
  ASTAndCondition jjtn000 = new ASTAndCondition(JJTANDCONDITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      condition();
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case AND:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_3;
        }
        jj_consume_token(AND);
        condition();
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, jjtree.nodeArity() > 1);
     }
    }
  }

  final public void condition() throws ParseException {
 /*@bgen(jjtree) #Condition(> 1) */
  ASTCondition jjtn000 = new ASTCondition(JJTCONDITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NOT:
        negation();
        break;
      case MINUS:
      case DATE:
      case METADATA_OBJECT_NAME:
      case FLOATING_POINT_LITERAL:
      case INTEGER_LITERAL:
      case STRING_LITERAL:
        if (jj_2_3(2)) {
          operand();
          conditionRightHandSide();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case METADATA_OBJECT_NAME:
            filter();
            break;
          default:
            jj_la1[9] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        break;
      case LPAREN:
        jj_consume_token(LPAREN);
        filterExpression();
        jj_consume_token(RPAREN);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, jjtree.nodeArity() > 1);
     }
    }
  }

  final public void negation() throws ParseException {
 /*@bgen(jjtree) Negation */
  ASTNegation jjtn000 = new ASTNegation(JJTNEGATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(NOT);
      condition();
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void operand() throws ParseException {
    summand();
  }

  final public void conditionRightHandSide() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case RELATIONAL_OPERATOR:
      compare();
      operand();
      break;
    case IN:
      inExpression();
      break;
    case LIKE:
      likeExpression();
      break;
    case STARTS_WITH:
      startsWithExpression();
      break;
    case ENDS_WITH:
      endsWithExpression();
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void inExpression() throws ParseException {
 /*@bgen(jjtree) InExpression */
  ASTInExpression jjtn000 = new ASTInExpression(JJTINEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IN);
      jj_consume_token(LPAREN);
      value();
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_4;
        }
        jj_consume_token(COMMA);
        value();
      }
      jj_consume_token(RPAREN);
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void likeExpression() throws ParseException {
 /*@bgen(jjtree) LikeExpression */
  ASTLikeExpression jjtn000 = new ASTLikeExpression(JJTLIKEEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LIKE);
      operand();
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void startsWithExpression() throws ParseException {
 /*@bgen(jjtree) StartsWithExpression */
  ASTStartsWithExpression jjtn000 = new ASTStartsWithExpression(JJTSTARTSWITHEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(STARTS_WITH);
      operand();
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }
